syntax = "proto3";

package job;

option go_package = "github.com/wtran29/protobuf-go/protogen/job";

message Application {
    uint32 app_id = 1;
    string app_name = 2;
    string phone = 3;
    string email = 4;
}